syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbcq;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/client-query;pbcq";

// ClientQuery source resource reference: pkg/dal/table/client-query.go
message ClientQuery {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "客户端查询条件ID" }];
  ClientQuerySpec spec = 2;
  ClientQueryAttachment attachment = 3;
}

// ClientQuerySpec source resource reference: pkg/dal/table/client-query.go
message ClientQuerySpec {
  string creator = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "创建人" }];
  string search_type = 2
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "搜索类型：recent、commo" }];
  string search_name = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "搜索名" }];
  google.protobuf.Struct search_condition = 4
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "搜索条件" }];
  google.protobuf.Timestamp created_at = 5
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "创建时间" }];
  google.protobuf.Timestamp updated_at = 6
      [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "更新时间" }];
}

// ClientQueryAttachment source resource reference: pkg/dal/table/client-query.go
message ClientQueryAttachment {
  uint32 biz_id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "业务ID" }];
  uint32 app_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务ID" }];
}