syntax = "proto3";

import "pkg/protocol/core/base/base.proto";
import "pkg/protocol/core/kv/kvs.proto";
import "pkg/protocol/core/content/content.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package pbrkv;

option go_package = "github.com/TencentBlueKing/bk-bscp/pkg/protocol/core/released-kv;pbrkv";

// ReleasedKv source resource reference: pkg/dal/table/released_kv.go
message ReleasedKv {
  uint32 id = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本键值配置项ID" }];
  uint32 release_id = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "服务版本ID" }];
  pbkv.KvSpec spec = 3;
  pbkv.KvAttachment attachment = 4;
  pbbase.Revision revision = 5;
  pbcontent.ContentSpec content_spec = 6;
}
